pkp/pkp-lib#7287 Remove old email sending code

--- a/plugins/paymethod/manual/locale/cs_CZ/emails.po
+++ b/plugins/paymethod/manual/locale/cs_CZ/emails.po
@@ -19,11 +19,11 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Je třeba zpracovat manuální platbu pro nakladatelství {$contextName} a "
-"uživatele {$userFullName} (uživatelské jméno &quot;{$userName}&quot;).<br />"
+"uživatele {$senderName} (uživatelské jméno &quot;{$senderUsername}&quot;).<br />"
 "\n"
 "<br />\n"
-"Položka, za kterou je placeno &quot;{$itemName}&quot;.<br />\n"
-"Cena je {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Položka, za kterou je placeno &quot;{$paymentName}&quot;.<br />\n"
+"Cena je {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Tento email byl vygenerován OMP pluginem Manuální platby."
 
