--- a/plugins/paymethod/manual/locale/es_ES/emails.po
+++ b/plugins/paymethod/manual/locale/es_ES/emails.po
@@ -14,10 +14,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Es necesario procesar un pago manual para la editorial {$contextName} y el "
-"usuario/a {$userFullName} (username &quot;{$userName}&quot;).<br />\n"
+"usuario/a {$senderName} (username &quot;{$senderUsername}&quot;).<br />\n"
 "<br />\n"
-"El elemento por el que hay que pagar es &quot;{$itemName}&quot;.<br />\n"
-"El coste es {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"El elemento por el que hay que pagar es &quot;{$paymentName}&quot;.<br />\n"
+"El coste es {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Este correo electrónico ha sido generado por el módulo de pago manual de "
 "Open Monograph Press."
