--- a/plugins/paymethod/manual/locale/fi_FI/emails.po
+++ b/plugins/paymethod/manual/locale/fi_FI/emails.po
@@ -18,12 +18,12 @@ msgstr ""
 
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
-"Käyttäjän {$userFullName} (käyttäjätunnus &quot;{$userName}&quot;) tekemä, "
+"Käyttäjän {$senderName} (käyttäjätunnus &quot;{$senderUsername}&quot;) tekemä, "
 "julkaisijalle {$contextName} kohdistuva manuaalinen maksu on käsiteltävä.<br "
 "/>\n"
 "<br />\n"
-"Maksettava kohde on &quot;{$itemName}&quot;.<br />\n"
-"Hinta: {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Maksettava kohde on &quot;{$paymentName}&quot;.<br />\n"
+"Hinta: {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Tämä sähköposti on Open Monograph Press -järjestelmän Manuaalinen maksu -"
 "lisäosan luoma."
