--- a/plugins/paymethod/manual/locale/gl_ES/emails.po
+++ b/plugins/paymethod/manual/locale/gl_ES/emails.po
@@ -19,10 +19,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Hai que procesar un pago manual para a editorial {$contextName} e o usuario "
-"{$userFullName} (username &quot;{$userName}&quot;). <br />\n"
+"{$senderName} (username &quot;{$senderUsername}&quot;). <br />\n"
 "<br />\n"
-"O elemento que se está a pagar é &quot;{$itemName}&quot;. <br />\n"
-"O custo é {$itemCost} ({$itemCurrencyCode}). <br />\n"
+"O elemento que se está a pagar é &quot;{$paymentName}&quot;. <br />\n"
+"O custo é {$paymentAmount} ({$paymentCurrencyCode}). <br />\n"
 "<br />\n"
 "Este correo electrónico foi xerado polo complemento de pagamento manual de "
 "OMP."
