--- a/plugins/paymethod/manual/locale/hu_HU/emails.po
+++ b/plugins/paymethod/manual/locale/hu_HU/emails.po
@@ -21,10 +21,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "A kifizetést még fel kell dolgoznia a kiadónak{$contextName} a "
-"{$userFullName} (username &quot;{$userName}&quot;) felhasználónak.<br />\n"
+"{$senderName} (username &quot;{$senderUsername}&quot;) felhasználónak.<br />\n"
 "<br />\n"
-"A vásárolt tétel &quot;{$itemName}&quot;.<br />\n"
-"Az ára {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"A vásárolt tétel &quot;{$paymentName}&quot;.<br />\n"
+"Az ára {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Ezt az e-mailt az Open Monograph Press Manual Payment plugin generálta."
 
