--- a/plugins/paymethod/manual/locale/it_IT/emails.po
+++ b/plugins/paymethod/manual/locale/it_IT/emails.po
@@ -20,11 +20,11 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "È necessario eseguire un pagamento manuale per la casa editirice "
-"{$contextName} e l'utente {$userFullName} (nome utente "
-"&quot;{$userName}&quot;).<br />\n"
+"{$contextName} e l'utente {$senderName} (nome utente "
+"&quot;{$senderUsername}&quot;).<br />\n"
 "<br />\n"
-"L'oggetto pagato è &quot;{$itemName}&quot;.<br />\n"
-"Il costo è {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"L'oggetto pagato è &quot;{$paymentName}&quot;.<br />\n"
+"Il costo è {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Questa email è stata generata dal plug-in Open Mongraph Press Manual Payment."
 
