--- a/plugins/paymethod/manual/locale/pl_PL/emails.po
+++ b/plugins/paymethod/manual/locale/pl_PL/emails.po
@@ -20,11 +20,11 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Należy przeprowadzić manualną płatność dla tego wydawnictwa  {$contextName} "
-"i użytkownika {$userFullName}(nazwa użytkownika &quot;{$userName}&quot;).<br "
+"i użytkownika {$senderName}(nazwa użytkownika &quot;{$senderUsername}&quot;).<br "
 "/>\n"
 "<br />\n"
-"Opłacany przedmiot: &quot;{$itemName}&quot;.<br />\n"
-"Koszt: {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Opłacany przedmiot: &quot;{$paymentName}&quot;.<br />\n"
+"Koszt: {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Ten email jest wygenerowany przez wtyczkę manualnej płatności Open Monograph "
 "Press."
