--- a/plugins/paymethod/manual/locale/pt_BR/emails.po
+++ b/plugins/paymethod/manual/locale/pt_BR/emails.po
@@ -19,10 +19,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Um pagamento manual precisa ser processado para a editora {$contextName} e o "
-"usuário {$userFullName} (nome de usuário &quot;{$userName}&quot;).<br />\n"
+"usuário {$senderName} (nome de usuário &quot;{$senderUsername}&quot;).<br />\n"
 "<br />\n"
-"O item que está sendo pago é &quot;{$itemName}&quot;. <br />\n"
-"O custo é {$itemCost} ({$itemCurrencyCode}). <br />\n"
+"O item que está sendo pago é &quot;{$paymentName}&quot;. <br />\n"
+"O custo é {$paymentAmount} ({$paymentCurrencyCode}). <br />\n"
 "<br />\n"
 "Esse e-mail foi gerado pela ferramenta pagamento manual do Open Monograph "
 "Press."
