--- a/plugins/paymethod/manual/locale/tr_TR/emails.po
+++ b/plugins/paymethod/manual/locale/tr_TR/emails.po
@@ -19,10 +19,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "{$contextName} yayınevi ve { userFullName} kullanıcısı (kullanıcı adı &quot; "
-"{$userName} &quot;) için ödemenin elle gerçekleştirilmesi gerekiyor. <br />\n"
+"{$senderUsername} &quot;) için ödemenin elle gerçekleştirilmesi gerekiyor. <br />\n"
 "<br />\n"
-"Ödeme yapılan öğe  quot; {$itemName} &quot;.<br />\n"
-"Maliyet {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Ödeme yapılan öğe  quot; {$paymentName} &quot;.<br />\n"
+"Maliyet {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Bu e-posta Açık Kitap Sistemleri Elle Yapılan Ödeme eklentisi tarafından "
 "oluşturulmuştur."
