--- a/plugins/paymethod/manual/locale/uk/emails.po
+++ b/plugins/paymethod/manual/locale/uk/emails.po
@@ -19,11 +19,11 @@ msgstr "Сповіщення про оплату вручну"
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Платіж, здійснений вручну, потрібно обробити для е-видавництва {$contextName}"
-" і користувача {$userFullName} (ім'я користувача &quot;{$userName}&quot;)"
+" і користувача {$senderName} (ім'я користувача &quot;{$senderUsername}&quot;)"
 ".<br />\n"
 "<br />\n"
-"Товар, що оплачується: &quot;{$itemName}&quot;.<br />\n"
-"Вартість становить {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Товар, що оплачується: &quot;{$paymentName}&quot;.<br />\n"
+"Вартість становить {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Цей електронний лист був згенерований плагіном для ручної оплати Open "
 "Monograph Press."
