--- a/plugins/paymethod/manual/locale/da_DK/emails.po
+++ b/plugins/paymethod/manual/locale/da_DK/emails.po
@@ -20,10 +20,10 @@ msgstr "Meddelelse om manuel betaling"
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Der skal gennemføres en manuel betaling til forlaget {$contextName} og "
-"brugeren {$userFullName} (username &quot;{$userName}&quot;).<br />\n"
+"brugeren {$senderName} (username &quot;{$senderUsername}&quot;).<br />\n"
 "<br />\n"
-"Betalingen vedrører &quot;{$itemName}&quot;.<br />\n"
-"Prisen er {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Betalingen vedrører &quot;{$paymentName}&quot;.<br />\n"
+"Prisen er {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Denne e-mail blev genereret af Open Monograph Press plugin til manuelle "
 "betalinger."
