--- a/plugins/paymethod/manual/locale/mk_MK/emails.po
+++ b/plugins/paymethod/manual/locale/mk_MK/emails.po
@@ -19,10 +19,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Рачно плаќање треба да се обработи за печатот {$contextName} и корисникот "
-"{$userFullName} (корисничко име &quot; {$userName}&quot;). <br />\n"
+"{$senderName} (корисничко име &quot; {$senderUsername}&quot;). <br />\n"
 "<br />\n"
-"Предметот за кој се плаќа е &quot;{$itemName}&quot;. <br />\n"
-"Цената е {$itemCost} ({$itemCurrencyCode}). <br />\n"
+"Предметот за кој се плаќа е &quot;{$paymentName}&quot;. <br />\n"
+"Цената е {$paymentAmount} ({$paymentCurrencyCode}). <br />\n"
 "<br />\n"
 "Оваа е-пошта е генерирана од приклучокот за отворено монографија за рачно "
 "плаќање."
