--- a/plugins/paymethod/manual/locale/nb_NO/emails.po
+++ b/plugins/paymethod/manual/locale/nb_NO/emails.po
@@ -19,10 +19,10 @@ msgstr ""
 msgid "emails.manualPaymentNotification.body"
 msgstr ""
 "Der skal gjennomføres en manuell betaling til utgiveren {$contextName} og "
-"brukeren {$userFullName} (username &quot;{$userName}&quot;).<br />\n"
+"brukeren {$senderName} (username &quot;{$senderUsername}&quot;).<br />\n"
 "<br />\n"
-"Betalingen vedrører &quot;{$itemName}&quot;.<br />\n"
-"Prisen er {$itemCost} ({$itemCurrencyCode}).<br />\n"
+"Betalingen vedrører &quot;{$paymentName}&quot;.<br />\n"
+"Prisen er {$paymentAmount} ({$paymentCurrencyCode}).<br />\n"
 "<br />\n"
 "Denne e-posten ble generert av Open Monograph Press programtilleg for "
 "manuelle betalinger."
