--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1110,6 +1110,15 @@ msgstr "Please select the category to which you would like this menu item to lin
 msgid "grid.series.urlWillBe"
 msgstr "The series's URL will be: {$sampleUrl}"
 
+msgid "stats.publications.downloadReport.description"
+msgstr "Download a CSV/Excel spreadsheet with usage statistics for monographs matching the following parameters."
+
+msgid "stats.publications.downloadReport.downloadSubmissions"
+msgstr "Download Monographs"
+
+msgid "stats.publications.downloadReport.downloadSubmissions.description"
+msgstr "The number of abstract views and file downloads for each monograph."
+
 msgid "stats.publicationStats"
 msgstr "Monograph Stats"
 
