pkp/pkp-lib#8150 REVIEW_REQUEST_SUBSEQUENT subject and body localization

--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -161,6 +161,27 @@ msgstr ""
 "{$signature}<br />\n"
 ""
 
+msgid "emails.reviewRequestSubsequent.subject"
+msgstr "Request to review a revised submission"
+
+msgid "emails.reviewRequestSubsequent.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>"
+"<p>Thank you for your review of <a href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a>. The authors have considered the "
+"reviewers' feedback and have now submitted a revised version of their work. "
+"I'm writing to ask if you would conduct a second round of peer review for this submission. {$contextName}.</p>"
+"<p>If you are able to review this submission, your review is due by {$reviewDueDate}. You can "
+"<a href=\"{$reviewAssignmentUrl}\">follow the review steps</a> to view the submission, upload review files, and submit "
+"your review comments.<p>"
+"<p><a href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a></p>"
+"<p>Abstract</p>"
+"{$submissionAbstract}"
+"<p>Please accept or decline the review by {$responseDueDate}.</p>"
+"<p>Please feel free to contact me with any questions about the submission or the review process.</p>"
+"<p>Thank you for considering this request. Your help is much appreciated.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
+
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Manuscript Review Request"
 
