--- a/docs/release-notes/README-3.2.1
+++ b/docs/release-notes/README-3.2.1
@@ -1,7 +1,7 @@
-OMP 3.2.1-4 Release Notes
-Git tag: 3_2_1-4
+OMP 3.2.1-5 Release Notes
+Git tag: 3_2_1-5
 
-Release date: February 5, 2021
+Release date: November 4, 2022
 ===============================
 
 See config.TEMPLATE.inc.php for a description and examples of all supported
@@ -16,6 +16,10 @@ New config.inc.php parameters:
 	- An allowed_hosts option was added to protect against HOST injection attacks.
 		We recommend configuring this setting! See "Recommended Configuration" in
 		docs/README.md for details. (https://github.com/pkp/pkp-lib/issues/7649)
+
+3.2.1-5 Build
+-------------
+	#8307: SECURITY Validate author IDs against submissions/publications
 
 3.2.1-4 Build
 -------------
